--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Laravel default ignores
 /.phpunit.cache
 /node_modules
 /public/build
@@ -18,3 +19,15 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+
+# Terraform ignores
+*.tfstate
+*.tfstate.*
+.terraform/
+*.tfvars
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+.terraformrc
+terraform.rc
