Add Docker setup.

--- a/.env.example
+++ b/.env.example
@@ -22,8 +22,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=pgsql
 DB_PORT=5432
-DB_DATABASE=laravel
-DB_USERNAME=sail
+DB_DATABASE=albertclo
+DB_USERNAME=albertclo
 DB_PASSWORD=password
 
 SESSION_DRIVER=database
@@ -36,15 +36,15 @@ BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
-CACHE_STORE=database
+CACHE_STORE=redis
 CACHE_PREFIX=
-
-MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
 REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_DB=0
+REDIS_CACHE_DB=1
 
 MAIL_MAILER=log
 MAIL_HOST=127.0.0.1
@@ -62,3 +62,6 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+OS_USER=ec2-user
+OS_UID=1000
