--- a/infra/docker/docker-compose.yml
+++ b/infra/docker/docker-compose.yml
@@ -1,49 +1,38 @@
 version: '3.8'
 
 services:
-    app:
+    nginx:
+        container_name: albertclo_nginx
+        image: nginx:alpine
+        ports:
+            - "80:80"
+        volumes:
+            - ../../:/var/www
+            - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+        depends_on:
+            - php
+        networks:
+            - albertclo-network
+
+    php:
+        container_name: albertclo_php
         build:
             args:
-                user: ${USER:-ec2-user}
-                uid: ${UID:-10002}
-            context: ./docker/services/app
+                user: ${OS_USER}
+                uid: ${OS_UID}
+                groupId: ${OS_GROUP_ID}
+            context: ./php
             dockerfile: Dockerfile
-        image: albertclo:app
-        container_name: albertclo-app
-        restart: unless-stopped
-        working_dir: /var/www
         volumes:
-            - ./:/var/www
-        networks:
-            - albertclo-network
-
-    queue:
-        image: albertclo:app
-        container_name: albertclo-queue
-        restart: always
-        working_dir: /var/www/
-        command: php artisan queue:work
+            - ../../:/var/www
         depends_on:
-            - app
-        volumes:
-            - ./:/var/www
-        networks:
-            - albertclo-network
-
-    nginx:
-        image: nginx:alpine
-        container_name: albertclo-nginx
-        restart: unless-stopped
-        ports:
-            - 80:80
-        volumes:
-            - ./:/var/www
-            - ./docker/services/nginx/conf.d:/etc/nginx/conf.d/
+            - pgsql
         networks:
             - albertclo-network
 
     pgsql:
-        image: 'postgres:15'
+        container_name: albertclo_postgres
+        image: postgres:15
         ports:
             - '${FORWARD_DB_PORT:-5432}:5432'
         environment:
@@ -52,20 +41,35 @@ services:
             POSTGRES_USER: '${DB_USERNAME}'
             POSTGRES_PASSWORD: '${DB_PASSWORD:-secret}'
         volumes:
-            - '/var/lib/albertclo/:/var/lib/postgresql/data'
+            - albertclo_postgres_data:/var/lib/postgresql/data
+        networks:
+            - albertclo-network
+
+    node:
+        container_name: albertclo_node
+        build:
+            args:
+                user: ${USER:-ec2-user}
+                uid: ${UID:-10002}
+            context: ./node
+            dockerfile: Dockerfile
+        volumes:
+            - ../../:/var/www
+        working_dir: /var/www
+        command: tail -f /dev/null  # Used to keep the docker container running. If this isn't here, the container will exit immediately after starting.
         networks:
             - albertclo-network
 
     redis:
+        container_name: albertclo_redis
         image: redis:alpine
-        container_name: albertclo-redis
-        restart: unless-stopped
-        volumes:
-            - /var/lib/albertclo/redis:/data
-        expose:
-            - 6379
+        ports:
+            - "6379:6379"
         networks:
             - albertclo-network
+
+volumes:
+    albertclo_postgres_data:
 
 networks:
   albertclo-network:
