--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,28 +1,34 @@
 name: Deploy to EC2
 
 on:
-  push:
-    branches:
-      - main
+    push:
+        branches:
+            - main
 
 jobs:
-  start:
-    runs-on: ubuntu-latest
+    start:
+        runs-on: ubuntu-latest
 
-    steps:
-      - uses: actions/checkout@v2
+        steps:
+            - uses: actions/checkout@v2
 
-      - name: AWS SSM Send-Command
-        uses: peterkimzz/aws-ssm-send-command@master
-        id: ssm
-        with:
-          aws-region: ${{ secrets.AWS_REGION }}
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          instance-ids: ${{ secrets.INSTANCE_ID }}
+            - name: AWS SSM Send-Command
+              uses: peterkimzz/aws-ssm-send-command@master
+              id: ssm
+              with:
+                  aws-region: ${{ secrets.AWS_REGION }}
+                  aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                  aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                  instance-ids: ${{ secrets.INSTANCE_ID }}
 
-          working-directory: /home/ec2-user
-          command: |
-            touch test3
-            echo "Hello World" > test3
-            touch test4
+                  working-directory: /home/ec2-user
+                  command: |
+                      sudo mkdir -p /opt/albertclo.com
+                      cd /opt/albertclo.com
+                      sudo chown -R ec2-user:ec2-user .
+                      if [ ! -d .git ]; then
+                          git clone https://github.com/AlbertClo/albertclo.com .
+                      fi
+                      git checkout main
+                      git fetch origin
+                      git reset --hard origin/main
