Add more deploy steps to GitHub action.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,10 @@ jobs:
                       if [ ! -d .git ]; then
                           git clone https://github.com/AlbertClo/albertclo.com .
                       fi
+                      git reset HEAD --hard
                       git checkout main
                       git fetch origin
                       git reset --hard origin/main
+                      docker-compose --env-file .env -f infra/docker/docker-compose.yml exec php php artisan migrate
+                      docker-compose --env-file .env -f infra/docker/docker-compose.yml exec php composer install
+                      docker-compose --env-file .env -f infra/docker/docker-compose.yml exec node npm run build
