Fix build steps.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,7 @@ jobs:
           # Run build commands
           docker-compose --env-file .env -f infra/docker/docker-compose.yml exec php composer install
           docker-compose --env-file .env -f infra/docker/docker-compose.yml exec php php artisan migrate
+          docker-compose --env-file .env -f infra/docker/docker-compose.yml exec node npm install
           docker-compose --env-file .env -f infra/docker/docker-compose.yml exec node npm run build
 
           echo 'done'"
